--- a/custom_components/versatile_thermostat/translations/pl.json
+++ b/custom_components/versatile_thermostat/translations/pl.json
@@ -18,7 +18,7 @@
         "menu_options": {
           "main": "Główne atrybuty",
           "central_boiler": "Bojler centralny",
-          "type": "Podstawy",
+          "type": "Urządzenia",
           "tpi": "Parametry TPI",
           "features": "Funkcje",
           "presets": "Ustawienia wstępne",
@@ -277,7 +277,7 @@
         "menu_options": {
           "main": "Główne atrybuty",
           "central_boiler": "Bojler centralny",
-          "type": "Podstawy",
+          "type": "Urządzenia",
           "tpi": "Parametry TPI",
           "features": "Funkcje",
           "presets": "Ustawienia wstępne",
