--- a/custom_components/versatile_thermostat/translations/de.json
+++ b/custom_components/versatile_thermostat/translations/de.json
@@ -29,8 +29,21 @@
           "advanced": "Erweiterte Einstellungen",
           "auto_start_stop": "Auto Start und Stop",
           "valve_regulation": "Konfiguration Ventilsteuerung",
+          "lock": "Sperrenverwaltung",
           "finalize": "Alles erledigt",
           "configuration_not_complete": "Konfiguration unvollständig"
+        }
+      },
+      "lock": {
+        "title": "Verwaltung der Sperre",
+        "description": "Die Sperrfunktion verhindert Änderungen an einem Thermostat über die Benutzeroberfläche oder Automatisierungen, während der Thermostat weiterhin funktioniert.",
+        "data": {
+          "use_lock_central_config": "Zentrale Sperrkonfiguration verwenden",
+          "lock_users": "Sperre verhindert Benutzerbefehle",
+          "lock_automations": "Sperre verhindert Befehle von Automatisierungen und Integrationen (z.B. Planer)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Aktivieren für zentrale Sperrkonfiguration. Deaktivieren für sperrspezifische Konfiguration dieses VTherm"
         }
       },
       "main": {
@@ -289,10 +302,25 @@
           "advanced": "Erweiterte Einstellungen",
           "auto_start_stop": "Auto Start und Stopp",
           "valve_regulation": "Konfiguration der Ventilsteuerung",
+          "lock": "Sperrenverwaltung",
           "finalize": "Alles erledigt",
           "configuration_not_complete": "Konfiguration unvollständig"
         }
-     },
+      },
+      "lock": {
+        "title": "Verwaltung der Sperre - {name}",
+        "description": "Die Sperrfunktion verhindert Änderungen an einem Thermostat über die Benutzeroberfläche oder Automatisierungen, während der Thermostat betriebsbereit bleibt.",
+        "data": {
+          "use_lock_central_config": "Zentrale Sperrkonfiguration verwenden",
+          "lock_code": "Optionaler PIN (4 Ziffern)",
+          "lock_users": "Sperre verhindert Benutzerbefehle",
+          "lock_automations": "Sperre verhindert Befehle von Automatisierungen und Integrationen (z.B. Planer)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Aktivieren für zentrale Sperrkonfiguration. Deaktivieren für sperrspezifische Konfiguration dieses VTherm",
+          "lock_code": "Der PIN-Code zum Entsperren des Thermostats (4 Ziffern)"
+        }
+      },
       "main": {
         "title": "Attribute - {name}",
         "description": "Wichtigste erforderliche Attribute&nbsp;[![?](https://img.icons8.com/color/18/help.png)](https://github.com/jmcollin78/versatile_thermostat/blob/main/documentation/de/base-attributes.md)",
