--- a/custom_components/versatile_thermostat/translations/el.json
+++ b/custom_components/versatile_thermostat/translations/el.json
@@ -21,6 +21,20 @@
           "use_presence_feature": "Χρήση ανίχνευσης παρουσίας"
         }
       },
+      "lock": {
+        "title": "Διαχείριση κλειδώματος",
+        "description": "Η λειτουργία κλειδώματος αποτρέπει αλλαγές στη διαμόρφωση ενός θερμοστάτη από το περιβάλλον χρήστη ή αυτοματισμούς, διατηρώντας παράλληλα τον θερμοστάτη σε λειτουργία.",
+        "data": {
+          "use_lock_central_config": "Χρήση κεντρικής διαμόρφωσης κλειδώματος",
+          "lock_code": "Ο κωδικός PIN για το ξεκλείδωμα του θερμοστάτη (4 ψηφία)",
+          "lock_users": "Το κλείδωμα θα αποτρέψει εντολές από χρήστες",
+          "lock_automations": "Το κλείδωμα θα αποτρέψει εντολές από αυτοματισμούς και ενσωματώσεις (π.χ. προγραμματιστής)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Επιλέξτε για χρήση της κεντρικής διαμόρφωσης κλειδώματος. Αποεπιλέξτε για χρήση συγκεκριμένης διαμόρφωσης κλειδώματος για αυτόν τον VTherm",
+          "lock_code": "Ο κωδικός PIN για το ξεκλείδωμα του θερμοστάτη (4 ψηφία)"
+        }
+      },
       "type": {
         "title": "Συνδεδεμένες οντότητες",
         "description": "Χαρακτηριστικά συνδεδεμένων οντοτήτων",
@@ -334,6 +348,20 @@
           "safety_delay_min": "Μέγιστη επιτρεπόμενη καθυστέρηση σε λεπτά μεταξύ δύο μετρήσεων θερμοκρασίας. Πάνω από αυτή την καθυστέρηση, ο θερμοστάτης θα μεταβεί σε κατάσταση ασφαλείας",
           "safety_min_on_percent": "Ελάχιστη τιμή ποσοστού θέρμανσης για ενεργοποίηση του προεπιλεγμένου ασφαλείας. Κάτω από αυτό το ποσοστό ισχύος, ο θερμοστάτης δεν θα μεταβεί στο προεπιλεγμένο ασφαλείας",
           "safety_default_on_percent": "Η προεπιλεγμένη τιμή ποσοστού ισχύος θέρμανσης στο προεπιλεγμένο ασφαλείας. Ορίστε σε 0 για να απενεργοποιήσετε τη θερμάστρα στο παρόν ασφαλείας"
+        }
+      },
+      "lock": {
+        "title": "Διαχείριση κλειδώματος",
+        "description": "Η λειτουργία κλειδώματος αποτρέπει αλλαγές στη διαμόρφωση ενός θερμοστάτη από το περιβάλλον χρήστη ή αυτοματισμούς, διατηρώντας παράλληλα τον θερμοστάτη σε λειτουργία.",
+        "data": {
+          "use_lock_central_config": "Χρήση κεντρικής διαμόρφωσης κλειδώματος",
+          "lock_code": "Ο κωδικός PIN για το ξεκλείδωμα του θερμοστάτη (4 ψηφία)",
+          "lock_users": "Το κλείδωμα θα αποτρέψει εντολές από χρήστες",
+          "lock_automations": "Το κλείδωμα θα αποτρέψει εντολές από αυτοματισμούς και ενσωματώσεις (π.χ. προγραμματιστής)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Επιλέξτε για χρήση της κεντρικής διαμόρφωσης κλειδώματος. Αποεπιλέξτε για χρήση συγκεκριμένης διαμόρφωσης κλειδώματος για αυτόν τον VTherm",
+          "lock_code": "Ο κωδικός PIN για το ξεκλείδωμα του θερμοστάτη (4 ψηφία)"
         }
       }
     },
