--- a/custom_components/versatile_thermostat/translations/it.json
+++ b/custom_components/versatile_thermostat/translations/it.json
@@ -30,8 +30,23 @@
           "advanced": "Parametri avanzati",
           "auto_start_stop": "Auto start and stop",
           "valve_regulation": "Configurazione della regolazione della valvola",
+          "lock": "Blocco",
           "finalize": "Fatto",
           "configuration_not_complete": "Configurazione non completata"
+        }
+      },
+      "lock": {
+        "title": "Gestione blocco",
+        "description": "La funzione di blocco impedisce modifiche alla configurazione di un termostato dall'interfaccia utente o dalle automazioni mantenendo il termostato operativo.",
+        "data": {
+          "use_lock_central_config": "Utilizzare la configurazione di blocco centrale",
+          "lock_code": "PIN opzionale (4 cifre)",
+          "lock_users": "Il blocco impedirà i comandi degli utenti",
+          "lock_automations": "Il blocco impedirà i comandi delle automazioni e delle integrazioni (ad es. pianificatore)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Selezionare per utilizzare la configurazione di blocco centrale. Deselezionare per utilizzare una configurazione di blocco specifica per questo VTherm",
+          "lock_code": "Il codice PIN per sbloccare il termostato (4 cifre)"
         }
       },
       "main": {
@@ -290,8 +305,23 @@
           "advanced": "Parametri avanzati",
           "auto_start_stop": "Auto start and stop",
           "valve_regulation": "Configurazione della regolazione della valvola",
+          "lock": "Gestione del blocco",
           "finalize": "Fatto",
           "configuration_not_complete": "Configurazione non completata"
+        }
+      },
+      "lock": {
+        "title": "Gestione blocco - {name}",
+        "description": "La funzione di blocco impedisce le modifiche a un termostato dall'interfaccia utente o dalle automazioni mantenendo il termostato operativo.",
+        "data": {
+          "use_lock_central_config": "Utilizzare la configurazione di blocco centrale",
+          "lock_code": "PIN opzionale (4 cifre)",
+          "lock_users": "Il blocco impedirà i comandi degli utenti",
+          "lock_automations": "Il blocco impedirà i comandi delle automazioni e delle integrazioni (ad es. pianificatore)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Selezionare per utilizzare la configurazione di blocco centrale. Deselezionare per utilizzare una configurazione di blocco specifica per questo VTherm",
+          "lock_code": "Il codice PIN per sbloccare il termostato (4 cifre)"
         }
       },
       "main": {
