--- a/custom_components/versatile_thermostat/translations/ru.json
+++ b/custom_components/versatile_thermostat/translations/ru.json
@@ -29,8 +29,22 @@
           "advanced": "Расширенные параметры",
           "auto_start_stop": "Авто старт и стоп",
           "valve_regulation": "Конфигурация регулировки клапана",
+          "lock": "Управление блокировкой",
           "finalize": "Все готово",
           "configuration_not_complete": "Конфигурация не завершена"
+        }
+      },
+      "lock": {
+        "title": "Управление блокировкой",
+        "description": "Функция блокировки предотвращает изменения в конфигурации термостата из пользовательского интерфейса или автоматизаций, сохраняя при этом работоспособность термостата.",
+        "data": {
+          "use_lock_central_config": "Использовать центральную конфигурацию блокировки",
+          "lock_users": "Блокировка будет предотвращать команды от пользователей",
+          "lock_automations": "Блокировка будет предотвращать команды от автоматизаций и интеграций (например, планировщика)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Отметьте, чтобы использовать центральную конфигурацию блокировки. Снимите флажок, чтобы использовать специальную конфигурацию блокировки для этого VTherm",
+          "lock_code": "Пин-код для разблокировки термостата (4 цифры)"
         }
       },
       "main": {
@@ -288,8 +302,22 @@
           "advanced": "Расширенные параметры",
           "auto_start_stop": "Авто старт и стоп",
           "valve_regulation": "Конфигурация регулировки клапана",
+          "lock": "Управление блокировкой",
           "finalize": "Все готово",
           "configuration_not_complete": "Конфигурация не завершена"
+        }
+      },
+      "lock": {
+        "title": "Управление блокировкой - {name}",
+        "description": "Функция блокировки предотвращает изменения в конфигурации термостата из пользовательского интерфейса или автоматизаций, сохраняя при этом работоспособность термостата.",
+        "data": {
+          "use_lock_central_config": "Использовать центральную конфигурацию блокировки",
+          "lock_users": "Блокировка будет предотвращать команды от пользователей",
+          "lock_automations": "Блокировка будет предотвращать команды от автоматизаций и интеграций (например, планировщика)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Отметьте, чтобы использовать центральную конфигурацию блокировки. Снимите флажок, чтобы использовать специальную конфигурацию блокировки для этого VTherm",
+          "lock_code": "Пин-код для разблокировки термостата (4 цифры)"
         }
       },
       "main": {
