--- a/custom_components/versatile_thermostat/translations/sk.json
+++ b/custom_components/versatile_thermostat/translations/sk.json
@@ -28,7 +28,22 @@
           "presence": "Detekcia prítomnosti",
           "advanced": "Pokročilé parametre",
           "finalize": "Všetko hotové",
+          "lock": "Správa zámku",
           "configuration_not_complete": "Konfigurácia nie je dokončená"
+        }
+      },
+      "lock": {
+        "title": "Správa zámku",
+        "description": "Funkcia zámku bráni zmenám v konfigurácii termostatu z používateľského rozhrania alebo automatizácií, zatiaľ čo termostat zostáva funkčný.",
+        "data": {
+          "use_lock_central_config": "Použiť centrálnu konfiguráciu zámku",
+          "lock_code": "PIN kód na odomknutie termostatu (4 číslice)",
+          "lock_users": "Zámok zabráni príkazom od používateľov",
+          "lock_automations": "Zámok zabráni príkazom z automatizácií a integrácií (napr. plánovača)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Začiarknite, ak chcete použiť centrálnu konfiguráciu zámku. Zrušte začiarknutie, ak chcete použiť špecifickú konfiguráciu zámku pre tento VTherm",
+          "lock_code": "PIN kód na odomknutie termostatu (4 číslice)"
         }
       },
       "main": {
@@ -263,7 +278,22 @@
           "presence": "Detekcia prítomnosti",
           "advanced": "Pokročilé parametre",
           "finalize": "Všetko hotové",
+          "lock": "Správa zámku",
           "configuration_not_complete": "Konfigurácia nie je dokončená"
+        }
+      },
+      "lock": {
+        "title": "Správa zámku - {name}",
+        "description": "Funkcia zámku zabraňuje zmenám termostatu z používateľského rozhrania alebo automatizácií, pričom termostat zostáva funkčný.",
+        "data": {
+          "use_lock_central_config": "Použiť centrálnu konfiguráciu zámku",
+          "lock_code": "PIN kód na odomknutie termostatu (4 číslice)",
+          "lock_users": "Zámok zabráni príkazom od používateľov",
+          "lock_automations": "Zámok zabráni príkazom z automatizácií a integrácií (napr. plánovača)"
+        },
+        "data_description": {
+          "use_lock_central_config": "Začiarknite, ak chcete použiť centrálnu konfiguráciu zámku. Zrušte začiarknutie, ak chcete použiť špecifickú konfiguráciu zámku pre tento VTherm",
+          "lock_code": "PIN kód na odomknutie termostatu (4 číslice)"
         }
       },
       "main": {
